Fix inlined textual image sizes on mobile

--- a/app/styles/text.scss
+++ b/app/styles/text.scss
@@ -16,14 +16,14 @@ h1 {
 
 	@include media(max-width-1449) {
 		font-size:46px;
-		img { height:34px; }
+		img[inline] { height:34px; }
 	}
 
 	@include media(max-width-600) {
 		width:100%;
 		font-size:38px;
 		margin-bottom:0px;
-		img { height:28px; }
+		img[inline] { height:28px; }
 	}
 
 }
@@ -47,7 +47,7 @@ h2 {
 	@include media(max-width-550) {
 		font-size:30px;
 		line-height:1.3;
-		img { height:22px; }
+		img[inline] { height:22px; }
 	}
 
 }
